# slack_helpdesk

./: .pre-commit-config.yaml  .tool-versions  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: CODEOWNERS  authors.md
src/db/: db.py
src/utils/: __init__.py  db.py  log_ticket.py  postgres_db.py
src/utils/interfaces/: __init__.py  db_manager.py  ticket_interface.py
tests/: docker-compose.yaml  test_db.py
tests/db/: init.sql
